force-app/main/default/objects/Car_Model__c/Car_Model__c.object-meta.xml
<CustomObject>
    <label>Car Model</label>
    <nameField>
        <label>Car Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>