force-app/main/default/objects/Car_Model__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Car Models</relationshipLabel>
    <relationshipName>Car_Models</relationshipName>
    <type>Lookup</type>
</CustomField>