force-app/main/default/objects/Car_Model__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Tax Exemptions Approved</fullName>
            </value>
            <value>
                <fullName>Ready For Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>