force-app/main/default/objects/Car_Model__c/fields/Tax_Exemption_Docs__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exemption Docs</label>
    <type>Checkbox</type>
</CustomField>